--- a/AngularSpiritCommitteeApp/index.html
+++ b/AngularSpiritCommitteeApp/index.html
@@ -1,19 +1,34 @@
 ﻿<!DOCTYPE html>
-<html>
+<html ng-app="SpiritApp">
 <head>
     <meta charset="utf-8" />
-    <title>AngularSpiritCommitteeApp</title>
+    <title>Spirit Committee App</title>
 
-    <!-- AngularSpiritCommitteeApp references -->
+    <!-- AngularTest references -->
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
     <link href="css/index.css" rel="stylesheet" />
 </head>
 <body>
-    <p>Hello, your application is ready!</p>
+    <div class="container" ng-controller="NavController as nc">
+        | <span ng-repeat="link in nc.links">
+            <a href="{{link.url}}">{{link.text}}</a> |
+        </span>
+    </div>
+    <div ng-view></div>
 
     <!-- Cordova reference, this is added to your app when it's built. -->
     <script src="cordova.js"></script>
-    <script src="scripts/platformOverrides.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.js"></script>
+    <script src="scripts/ui-bootstrap-tpls-1.1.2.min.js"></script>
 
-    <script src="scripts/index.js"></script>
+    <script src="spiritapp/SpiritApp.app.js"></script>
+    <script src="spiritapp/navmodule/spiritapp.NavModule.module.js"></script>
+    <script src="spiritapp/navmodule/navcontroller/spiritapp.navmodule.NavController.controller.js"></script>
+    <script src="spiritapp/eventsmodule/spiritapp.EventsModule.module.js"></script>
+    <script src="spiritapp/eventsmodule/eventscontroller/spiritapp.eventsmodule.EventsController.controller.js"></script>
+    <script src="spiritapp/refmodule/spiritapp.RefModule.module.js"></script>
+    <script src="spiritapp/refmodule/refcontroller/spiritapp.refmodule.RefController.controller.js"></script>
 </body>
 </html>
