Collapse panels working

--- a/AngularSpiritCommitteeApp/index.html
+++ b/AngularSpiritCommitteeApp/index.html
@@ -21,7 +21,8 @@
     <script src="cordova.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.js"></script>
-    <script src="scripts/ui-bootstrap-tpls-1.1.2.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-animate.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.2/ui-bootstrap-tpls.min.js"></script>
 
     <script src="spiritapp/SpiritApp.app.js"></script>
     <script src="spiritapp/navmodule/spiritapp.NavModule.module.js"></script>
@@ -30,5 +31,6 @@
     <script src="spiritapp/eventsmodule/eventscontroller/spiritapp.eventsmodule.EventsController.controller.js"></script>
     <script src="spiritapp/refmodule/spiritapp.RefModule.module.js"></script>
     <script src="spiritapp/refmodule/refcontroller/spiritapp.refmodule.RefController.controller.js"></script>
+    <script src="spiritapp/refmodule/refdetailcontroller/spiritapp.refmodule.RefDetailController.controller.js"></script>
 </body>
 </html>
