--- a/AngularSpiritCommitteeApp/spiritapp/refmodule/refviews/ref-view.html
+++ b/AngularSpiritCommitteeApp/spiritapp/refmodule/refviews/ref-view.html
@@ -1,6 +1,6 @@
 ﻿<div class="container">
     <h2>Reference</h2>
     <div ng-repeat="status in rc.statuses">
-        <label class="control-label">{{status}}</label>
+        <a ng-href="{{'#reference/' + status}}">{{status}}</a>
     </div>
 </div>
