--- a/AngularSpiritCommitteeApp/spiritapp/eventsmodule/eventsviews/events-view.html
+++ b/AngularSpiritCommitteeApp/spiritapp/eventsmodule/eventsviews/events-view.html
@@ -1,6 +1,31 @@
 ﻿<div class="container">
-    <h2>Events</h2>
-    <div ng-repeat="event in ec.events">
-        <label class="control-label">{{event.title}}</label>
+    <h1>Events</h1>
+    <div class="panel-group" id="accordion">
+        <div class="panel panel-default" ng-repeat="event in ec.events">
+            <div class="panel-heading">
+                <h4 class="panel-title">
+                    <a data-parent="#accordion" ng-click="event.isCollapsed = !event.isCollapsed">{{event.eventName}}</a>
+                </h4>
+            </div>
+            <div uib-collapse="event.isCollapsed">
+                <div class="panel-body">
+                    <p>Started: {{event.startDate}}</p>
+                    <p>Ended: {{event.endDate}}</p>
+                </div>
+            </div>
+        </div>
     </div>
+    <form class="form-horizontal">
+        <div class="form-group">
+            <h2>Add A New Event</h2>
+            <div>
+                <input class="form-control" ng-model="ec.eventName" />
+            </div>
+        </div>
+        <div class="form-group">
+            <div>
+                <button class="btn btn-primary" ng-click="ec.addEvent()">Add</button>
+            </div>
+        </div>
+    </form>
 </div>
