Improved reference page and add Event Details screen

--- a/AngularSpiritCommitteeApp/index.html
+++ b/AngularSpiritCommitteeApp/index.html
@@ -31,8 +31,8 @@
     <script src="spiritapp/navmodule/navcontroller/spiritapp.navmodule.NavController.controller.js"></script>
     <script src="spiritapp/eventsmodule/spiritapp.EventsModule.module.js"></script>
     <script src="spiritapp/eventsmodule/eventscontroller/spiritapp.eventsmodule.EventsController.controller.js"></script>
+    <script src="spiritapp/eventsmodule/eventdetailcontroller/spiritapp.eventsmodule.EventDetailController.controller.js"></script>
     <script src="spiritapp/refmodule/spiritapp.RefModule.module.js"></script>
     <script src="spiritapp/refmodule/refcontroller/spiritapp.refmodule.RefController.controller.js"></script>
-    <script src="spiritapp/refmodule/refdetailcontroller/spiritapp.refmodule.RefDetailController.controller.js"></script>
 </body>
 </html>
