--- a/AngularSpiritCommitteeApp/index.html
+++ b/AngularSpiritCommitteeApp/index.html
@@ -23,13 +23,14 @@
     <script src="cordova.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-route.js"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-animate.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.2/ui-bootstrap-tpls.min.js"></script>
 
     <script src="spiritapp/SpiritApp.app.js"></script>
     <script src="spiritapp/navmodule/spiritapp.NavModule.module.js"></script>
     <script src="spiritapp/navmodule/navcontroller/spiritapp.navmodule.NavController.controller.js"></script>
     <script src="spiritapp/eventsmodule/spiritapp.EventsModule.module.js"></script>
+    <script src="spiritapp/eventsmodule/addcommentcontroller/spiritapp.eventsmodule.AddCommentController.controller.js"></script>
+    <script src="spiritapp/eventsmodule/addeventcontroller/spiritapp.eventsmodule.AddEventController.controller.js"></script>
     <script src="spiritapp/eventsmodule/eventscontroller/spiritapp.eventsmodule.EventsController.controller.js"></script>
     <script src="spiritapp/eventsmodule/eventdetailcontroller/spiritapp.eventsmodule.EventDetailController.controller.js"></script>
     <script src="spiritapp/refmodule/spiritapp.RefModule.module.js"></script>
