--- a/AngularSpiritCommitteeApp/spiritapp/eventsmodule/eventsviews/add-comment-view.html
+++ b/AngularSpiritCommitteeApp/spiritapp/eventsmodule/eventsviews/add-comment-view.html
@@ -1,16 +1,18 @@
-﻿<div class="container">
-    <div class="modal-header">
-        <h2>Add A Comment</h2>
-    </div>
-    <form class="form-horizontal">
-        <div class="modal-body">
-            <div class="form-group">
-                <input class="form-control" ng-model="acc.commentText" />
-            </div>
-        </div>
-        <div class="modal-footer">
-            <button class="btn btn-primary" ng-click="acc.add()">Add</button>
-            <button class="btn" ng-click="acc.cancel()">Cancel</button>
-        </div>
-    </form>
+﻿<div class="modal-header">
+    <h2>Add A Comment</h2>
 </div>
+<form novalidate class="form-horizontal" name="acc.editForm">
+    <div class="modal-body">
+        <div class="form-group">
+            <input required type="text" name="commentText" class="form-control" 
+                    ng-model="acc.commentText" />
+            <span ng-show="acc.editForm.commentText.$dirty
+                    && acc.editForm.commentText.$error.required">Comment text is required</span>
+        </div>
+    </div>
+    <div class="modal-footer">
+        <button class="btn btn-primary" ng-disabled="acc.editForm.$invalid"
+                ng-click="acc.add()">Add</button>
+        <button class="btn" ng-click="acc.cancel()">Cancel</button>
+    </div>
+</form>
