--- a/AngularSpiritCommitteeApp/spiritapp/eventsmodule/eventsviews/add-event-view.html
+++ b/AngularSpiritCommitteeApp/spiritapp/eventsmodule/eventsviews/add-event-view.html
@@ -1,14 +1,18 @@
 ﻿<div class="modal-header">
     <h2>Add A New Event</h2>
 </div>
-<form class="form-horizontal">
+<form novalidate class="form-horizontal" name="aec.editForm">
     <div class="modal-body">
         <div class="form-group">
-            <label>Event Name: </label><input class="form-control" ng-model="aec.eventName" />
+            <label>*Event Name: </label><input required type="text" name="eventName"
+                    class="form-control" ng-model="aec.eventName" />
+            <span ng-show="aec.editForm.eventName.$dirty 
+                  && aec.editForm.eventName.$error.required">Event Name is required</span>
         </div>
     </div>
     <div class="modal-footer">
-        <button class="btn btn-primary" ng-click="aec.add()">Add</button>
+        <button class="btn btn-primary" ng-disabled="aec.editForm.$invalid"
+                ng-click="aec.add()">Add</button>
         <button class="btn" ng-click="aec.cancel()">Cancel</button>
     </div>
 </form>
