Added background color to forms with valid and invalid input

--- a/AngularSpiritCommitteeApp/spiritapp/eventsmodule/eventsviews/add-event-view.html
+++ b/AngularSpiritCommitteeApp/spiritapp/eventsmodule/eventsviews/add-event-view.html
@@ -4,7 +4,7 @@
 <form novalidate class="form-horizontal" name="aec.editForm">
     <div class="modal-body">
         <div class="form-group">
-            <label>*Event Name: </label><input required type="text" name="eventName"
+            <label>Event Name: </label><input required type="text" name="eventName"
                     class="form-control" ng-model="aec.eventName" />
             <span ng-show="aec.editForm.eventName.$dirty 
                   && aec.editForm.eventName.$error.required">Event Name is required</span>
