Added an events factory for holding events data

--- a/AngularSpiritCommitteeApp/index.html
+++ b/AngularSpiritCommitteeApp/index.html
@@ -47,6 +47,7 @@
     <script src="spiritapp/eventsmodules/eventscontrollers/events.module.AddEvent.controller.js"></script>
     <script src="spiritapp/eventsmodules/eventscontrollers/events.module.Events.controller.js"></script>
     <script src="spiritapp/eventsmodules/eventscontrollers/events.module.EventDetail.controller.js"></script>
+    <script src="spiritapp/eventsmodules/eventsproviders/events.module.EventsData.factory.js"></script>
     <script src="spiritapp/navmodules/spirit.app.Nav.module.js"></script>
     <script src="spiritapp/navmodules/navcontrollers/nav.module.Nav.controller.js"></script>
     <script src="spiritapp/refmodules/spirit.app.Ref.module.js"></script>
