Changed to using a factory for events so object is no longer created in addeventcontroller and a value holds the events.

--- a/AngularSpiritCommitteeApp/spiritapp/eventsmodules/eventsviews/events-view.html
+++ b/AngularSpiritCommitteeApp/spiritapp/eventsmodules/eventsviews/events-view.html
@@ -41,5 +41,5 @@
             </div>
         </div>
     </div>
-    <button class="btn btn-primary" ng-click="ec.addEvent()">Add Event</button>
+    <button class="btn btn-primary" ng-click="ec.addNewEvent()">Add New Event</button>
 </div>
