Refactored events to now hold a progression of statuses

--- a/AngularSpiritCommitteeApp/index.html
+++ b/AngularSpiritCommitteeApp/index.html
@@ -49,6 +49,7 @@
     <script src="spiritapp/eventsmodules/eventscontrollers/events.module.EventDetail.controller.js"></script>
     <script src="spiritapp/eventsmodules/eventsproviders/events.module.Event.factory.js"></script>
     <script src="spiritapp/eventsmodules/eventsproviders/events.module.EventsDataAssistant.service.js"></script>
+    <script src="spiritapp/eventsmodules/eventsproviders/events.module.EventStatusProgression.factory.js"></script>
     <script src="spiritapp/navmodules/spirit.app.Nav.module.js"></script>
     <script src="spiritapp/navmodules/navcontrollers/nav.module.Nav.controller.js"></script>
     <script src="spiritapp/refmodules/spirit.app.Ref.module.js"></script>
